# python-polylith-example-rye

./: README.md  pyproject.toml
projects/my_fastapi_project/: README.md  pyproject.toml
projects/my_gcp_function_project/: Makefile
